welcome.lessons.welcome.loopfor.LoopCourseForest.scala.error
Runner:6: error: value droite is not a member of Unit
  gauche() ; for (pas <- 1 to 4) {avance()} droite() ;
                                            ^